@@ -19,6 +19,12 @@
 
         <dependency>
             <groupId>com.proofpoint.platform</groupId>
+            <artifactId>http-server</artifactId>
+            <version>0.74-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.proofpoint.platform</groupId>
             <artifactId>json</artifactId>
             <version>0.75-SNAPSHOT</version>
         </dependency>
