@@ -30,10 +30,9 @@ import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
-
 import java.util.List;
 
-@Path("/v1/jmx/mbean")
+@Path("/admin/jmx/mbean")
 public class MBeanResource
 {
     private final MBeanServer mbeanServer;
